--- a/styles/orders.scss
+++ b/styles/orders.scss
@@ -15,6 +15,7 @@
 }
 
 #orders-container {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-top: 2%;
   display: flex;
   flex-direction: column;
@@ -72,7 +73,6 @@
       }
     }
     .eta {
-      font-weight: bold;
       font-size: 2em;
       margin-bottom: 5%;
     }
