--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" />
   <link rel="stylesheet" href="/vendor/border-box.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,200;1,300&display=swap" rel="stylesheet">
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/main.css" />
   <link rel="stylesheet" href="/styles/nav.css" />
@@ -39,7 +42,7 @@
          <div>123-456-7890</div>
       </div>
       <div class="search-cart">
-        <i id="cart" class="fa-solid fa-cart-shopping"></i>
+        <i id="cart" class="fa-solid fa-cart-shopping"></i><p> View Cart</p>
       </div>
     </section>
   </nav>
