--- a/styles/login-register.scss
+++ b/styles/login-register.scss
@@ -1,3 +1,5 @@
+@import url('http://fonts.cdnfonts.com/css/gill-sans-mt-condensed');
+
 body {
   background: linear-gradient(90deg, rgba(212,100,85,1) 0%, rgba(199,162,116,1) 51%, rgba(236,158,30,1) 100%);
   display: flex;
