--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,5 @@
+@import url('http://fonts.cdnfonts.com/css/gill-sans-mt-condensed');
+
 body {
   display: flex;
   flex-direction: column;
@@ -5,7 +7,6 @@ body {
   align-items: center;
   background: linear-gradient(90deg, rgba(212,100,85,1) 0%, rgba(199,162,116,1) 51%, rgba(236,158,30,1) 100%);
 }
-
 
 .container {
   margin-top: 2%;
@@ -15,7 +16,8 @@ body {
   flex-direction: column;
   align-items: center;
   z-index: 2;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  // font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans MT', sans-serif;
   // font-family: 'Inter Tight', sans-serif;
   // background: rgb(236,160,160);
   // background: linear-gradient(166deg, rgba(236,160,160,1) 0%, rgba(199,162,116,1) 51%, rgba(236,158,30,1) 100%);
