--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
   <meta charset="UTF-8" >
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+  <!-- Font -->
+  <link href="http://fonts.cdnfonts.com/css/gill-sans-mt-condensed" rel="stylesheet">
   <!-- External CSS -->
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" />
   <link rel="stylesheet" href="/vendor/border-box.css" />
