--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -20,6 +20,7 @@
 
   <!-- External JS -->
   <script src="/vendor/jquery-3.0.0.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/orders.js"></script>
 </head>
