--- a/styles/receipt.scss
+++ b/styles/receipt.scss
@@ -29,7 +29,7 @@ main {
 
 #receipt {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 1.75em;
+  font-size: 1.5em;
   margin-top: 2%;
   margin-bottom: 5%;
   width: 55%;
@@ -91,6 +91,11 @@ main {
   }
 }
 
+#est-time {
+  text-align: left;
+  font-weight: normal;
+}
+
 #total {
   width: 100%;
   display: flex;
@@ -98,11 +103,9 @@ main {
   justify-content: space-between;
   padding: 2% 5% 2% 5%;
   font-size: 1.3em;
+  text-align: right;
   .time {
     display: flex;
     flex-direction: column;
-  }
-  #total-price {
-
   }
 }
