--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,7 +30,7 @@
   <main>
     <div id="form-container">
       <div id="restaurant-pic">
-        <img src="https://i.imgur.com/WPcy3B6.jpeg">
+        <img src="https://i.imgur.com/w3FzOwc.jpg">
       </div>
       <form class="form" method="post" action="/api/login">
         <p>Hello!</p>
