--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,6 @@
 <header id="website-info">
   <div class="left-nav">
-    <span id="logo">Lighthouse Bistro</span>
+    <img id="logo" src="https://i.imgur.com/k7SuI3O.png"></img>
   </div>
   <div class="user-buttons">
     <% if (!user) { %>
