--- a/views/dishes.ejs
+++ b/views/dishes.ejs
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   <!-- Font -->
   <link href="http://fonts.cdnfonts.com/css/gill-sans-mt-condensed" rel="stylesheet">
-                
+
   <!-- External CSS -->
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" />
   <link rel="stylesheet" href="/vendor/border-box.css" />
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,200;1,300&display=swap" rel="stylesheet">
-  
+
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/main.css" />
   <link rel="stylesheet" href="/styles/nav.css" />
@@ -28,7 +28,6 @@
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/dishes.js"></script>
   <script type="text/javascript" src="/scripts/cart.js"></script>
-  <script defer src="/scripts/app.js"></script>
 </head>
 
 <body>
@@ -37,13 +36,13 @@
     <!-- Website Navbar -->
     <%- include('partials/_header') %>
     <!-- Restaurant Image -->
-    <div id="restaurant-pic" style="background-image: url('https://i.imgur.com/ughbGCU.jpeg')"></div>
+    <div id="restaurant-pic" style="background-image: url('https://i.imgur.com/WPcy3B6.jpeg')"></div>
      <!-- Restaurant Information -->
      <section id="restaurant-nav">
        <div class="restaurant-info">
          <label>Bistro Done Differently.</label>
-         <div>1234 Test Ave</div>
-         <div>123-456-7890</div>
+         <div>7425 Rockwater Dr.</div>
+         <div>(604)-839-7247</div>
       </div>
       <div class="search-cart">
         <i id="cart" class="fa-solid fa-cart-shopping"></i><p> View Cart</p>
