--- a/views/register.ejs
+++ b/views/register.ejs
@@ -30,26 +30,22 @@
   <main>
     <div id="form-container">
       <div id="restaurant-pic">
-        <img src="https://i.imgur.com/WPcy3B6.jpeg">
+        <img src="https://i.imgur.com/w3FzOwc.jpg">
       </div>
       <form class="form" method="post" action="/api/register">
         <p>Hello!</p>
         <P> Welcome to Lighthouse Bistro </p>
         <div class="login-register-title"><span>Register</span> for an Account</div>
         <div class="form-input">
-          <!-- <label class="name-label" for="inputFirstName">First Name</label> -->
           <input class="name-input" type="text" name="firstName" id="inputFirstName" placeholder="First Name">
         </div>
         <div class="form-input">
-          <!-- <label class="name-label" for="inputLastName">Last Name</label> -->
           <input class="name-input" type="text" name="lastName" id="inputLastName" placeholder="Last Name">
         </div>
         <div class="form-input">
-          <!-- <label class="phone-label" for="inputPhone">Phone Number</label> -->
           <input class="phone-input" value="1" type="tel" name="phone" id="inputPhone" placeholder="123-456-7890">
         </div>
         <div class="form-input">
-          <!-- <label class="password-label" for="inputPassword">Password</label> -->
           <input class="password-input" type="password" name="password" id="inputPassword" placeholder="Password">
         </div>
         <a href="./login">Login to Existing Account</a>
