Add 2 buttons to Order Summary Page with click handlers for viewing Order History

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -30,6 +30,10 @@
   <nav>
     <%- include('partials/_header') %>
   </nav>
+  <div class="button-container">
+    <button class="order-history-button" id="current" type="submit">View Current Orders</button>
+    <button class="order-history-button" id="history" type="submit">View Order History</button>
+  </div>
   <main class="container">
     <section id="orders-container"></section>
   </main>
