--- a/styles/orders.scss
+++ b/styles/orders.scss
@@ -1,11 +1,11 @@
 @import url('http://fonts.cdnfonts.com/css/gill-sans-mt-condensed');
 
-  body {
+body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(90deg, rgba(212,100,85,1) 0%, rgba(199,162,116,1) 51%, rgba(236,158,30,1) 100%);
+  background: linear-gradient(90deg, rgba(212, 100, 85, 1) 0%, rgba(199, 162, 116, 1) 51%, rgba(236, 158, 30, 1) 100%);
 }
 
 .container {
@@ -16,6 +16,29 @@
   align-items: center;
 }
 
+.button-container {
+  display: flex;
+}
+
+.order-history-button {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  justify-content: center;
+  margin-right: 50px;
+  margin-left: 50px;
+  width: 300px;
+  padding: 0.5em 1em 0.5em 1em;
+  border-radius: 2em;
+  border: none;
+  margin-top: 30px;
+  font-size: 1.7em;
+  background-color: rgb(206, 229, 244);
+  cursor: pointer;
+}
+
+.order-history-button:hover {
+  transform: scale(1.05);
+}
+
 #orders-container {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-top: 2%;
@@ -24,6 +47,7 @@
   border-radius: 10%;
   align-items: center;
   width: 80%;
+
   article {
     display: flex;
     flex-direction: row;
@@ -35,31 +59,38 @@
     margin-bottom: 1%;
     padding: 3%;
     border-radius: 1em;
+
     .order-detail {
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
+
       label {
-          margin-bottom: 2%;
-          font-size: 2em;
+        margin-bottom: 2%;
+        font-size: 2em;
       }
+
       div {
-          text-align: left;
-          margin-top: 1%;
-          margin-bottom: 2%;
-          font-size: 1.5em;
-          input {
-            border: none;
-            border-bottom: 1px solid gray;
-          }
-          button {
-            font-size: 0.9em;
-            margin-top: 4%;
-          }
+        text-align: left;
+        margin-top: 1%;
+        margin-bottom: 2%;
+        font-size: 1.5em;
+
+        input {
+          border: none;
+          border-bottom: 1px solid gray;
+        }
+
+        button {
+          font-size: 0.9em;
+          margin-top: 4%;
+        }
       }
+
       .restaurant-input {
         display: flex;
         flex-direction: row;
+
         form {
           input {
             border: none;
@@ -67,7 +98,10 @@
             appearance: none;
             margin-bottom: 5%
           }
-        };
+        }
+
+        ;
+
         button {
           width: 30%;
           padding: 0.5em 1em 0.5em 1em;
@@ -77,28 +111,33 @@
           background-color: rgb(206, 229, 244);
           cursor: pointer;
         }
+
         button:hover {
           transform: scale(1.05);
         }
       }
     }
+
     .eta {
       font-size: 2em;
       margin-bottom: 5%;
     }
+
     .ready-pickup {
-        width: 50%;
-        padding: 0.5em 1em 0.5em 1em;
-        border-radius: 2em;
-        border: none;
-        font-size: 0.8em;
-        background-color: rgb(206, 229, 244);
-        cursor: pointer;
+      width: 50%;
+      padding: 0.5em 1em 0.5em 1em;
+      border-radius: 2em;
+      border: none;
+      font-size: 0.8em;
+      background-color: rgb(206, 229, 244);
+      cursor: pointer;
     }
+
     .ready-pickup:hover {
       transform: scale(1.05);
     }
   }
+
   article:hover {
     box-shadow: 0.2em 0.2em 0.5em gray;
   }
